--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://dan1sh15.github.io/Weather-react-app",
+  "homepage": "https://dan1sh15.github.io/Weather-React-App",
   "name": "weather-app",
   "version": "0.1.0",
   "private": true,
